--- a/app/src/main/res/layout/sub_categories_adapter_item_layout.xml
+++ b/app/src/main/res/layout/sub_categories_adapter_item_layout.xml
@@ -1,87 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_80sdp"
     android:layout_marginLeft="@dimen/_10sdp"
     android:layout_marginTop="@dimen/_10sdp"
-    android:layout_marginRight="@dimen/_10sdp">
+    android:layout_marginRight="@dimen/_10sdp"
+    app:cardCornerRadius="@dimen/_10sdp"
+    android:elevation="@dimen/_10sdp"
+    app:cardElevation="@dimen/_10sdp">
 
-    <ImageView
-        android:id="@+id/img_subCategory"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_80sdp"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_sub_category_bg"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/img_subCategory_selected"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_80sdp"
-        android:scaleType="fitXY"
-        android:visibility="gone"
-        android:src="@drawable/rounded_transparent_pink_bg"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/img_subCategory"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_80sdp"
+            android:background="@drawable/gradient_bg_pink_white"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/ic_arrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_20sdp"
-        android:src="@drawable/ic_down_arrow_pink"
-        app:layout_constraintBottom_toBottomOf="@id/img_subCategory"
-        app:layout_constraintEnd_toEndOf="@id/img_subCategory"
-        app:layout_constraintTop_toTopOf="@id/img_subCategory" />
+        <ImageView
+            android:id="@+id/img_subCategory_selected"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_80sdp"
+            android:scaleType="fitXY"
+            android:src="@drawable/rounded_transparent_pink_bg"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/img_sub_Category"
-        android:layout_width="@dimen/_55sdp"
-        android:layout_height="@dimen/_55sdp"
-        android:layout_marginLeft="@dimen/_15sdp"
-        android:src="@drawable/ic_sub_category"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/ic_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:src="@drawable/ic_down_arrow_pink"
+            app:layout_constraintBottom_toBottomOf="@id/img_subCategory"
+            app:layout_constraintEnd_toEndOf="@id/img_subCategory"
+            app:layout_constraintTop_toTopOf="@id/img_subCategory" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/txt_subCategory_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_15sdp"
-        android:layout_marginRight="@dimen/_15sdp"
-        android:fontFamily="@font/montserrat_bold"
-        android:text="Hair Henna"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_12ssp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/txt_total_services"
-        app:layout_constraintEnd_toStartOf="@id/ic_arrow"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@id/img_sub_Category"
-        app:layout_constraintTop_toBottomOf="@+id/img_subCategory" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/img_sub_Category"
+            android:layout_width="@dimen/_55sdp"
+            android:layout_height="@dimen/_55sdp"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:src="@drawable/ic_sub_category"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/txt_total_services"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_15sdp"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginRight="@dimen/_15sdp"
-        android:fontFamily="@font/montserrat_bold"
-        android:text="3 Services"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_10ssp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/img_subCategory"
-        app:layout_constraintEnd_toStartOf="@id/ic_arrow"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@id/img_sub_Category"
-        app:layout_constraintTop_toBottomOf="@+id/txt_subCategory_name" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/txt_subCategory_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_15sdp"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="Hair Henna"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12ssp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/txt_total_services"
+            app:layout_constraintEnd_toStartOf="@id/ic_arrow"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@id/img_sub_Category"
+            app:layout_constraintTop_toBottomOf="@+id/img_subCategory" />
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/txt_total_services"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginRight="@dimen/_15sdp"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="3 Services"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_10ssp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/img_subCategory"
+            app:layout_constraintEnd_toStartOf="@id/ic_arrow"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@id/img_sub_Category"
+            app:layout_constraintTop_toBottomOf="@+id/txt_subCategory_name" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
